--- a/test/fixtures/items.yml
+++ b/test/fixtures/items.yml
@@ -3,21 +3,17 @@
 one:
   name: MyString
   description: MyText
-  status: 1
-  price: 
+  active: 1
   bestseller: 1
   category: one
   label: one
-  photo: MyString
   site: one
 
 two:
   name: MyString
   description: MyText
-  status: 1
-  price: 
+  active: 1
   bestseller: 1
   category: two
   label: two
-  photo: MyString
   site: two
