--- a/config/database.yml
+++ b/config/database.yml
@@ -48,4 +48,8 @@ test:
 #     url: <%= ENV['DATABASE_URL'] %>
 #
 production:
- adapter: pg
+  adapter: postgresql
+  encoding: unicode
+  # For details on connection pooling, see Rails configuration guide
+  # http://guides.rubyonrails.org/configuring.html#database-pooling
+  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
