--- a/config/database.yml
+++ b/config/database.yml
@@ -48,4 +48,16 @@ test:
 #     url: <%= ENV['DATABASE_URL'] %>
 #
 production:
-  url: <%= ENV['DATABASE_URL'] %>
+  <<: *default
+  database: ef-painel-v3_production
+  username: ef-painel-v3
+  password: <%= ENV['EF-PAINEL-V3_DATABASE_PASSWORD'] %>
+
+
+########## Para deploy no heroku ##########
+# production:
+  #url: <%= ENV['DATABASE_URL'] %>
+  
+  # Comando abaixo para rodar depois do deploy
+  # heroku run 'rake db:setup'
+##########    ---- # ------      ##########
