--- a/config/database.yml
+++ b/config/database.yml
@@ -48,7 +48,14 @@ test:
 #     url: <%= ENV['DATABASE_URL'] %>
 #
 production:
-  url: <%= ENV['DATABASE_URL'] %>
+  <<: *default
+  database: ef-painel-v3_production
+  secret_key_base: xxxxxxxxxxxxxxxxxxxxxxx
+
+
+########## Para deploy no heroku ##########
+# production:
+  #url: <%= ENV['DATABASE_URL'] %>
   
   # Comando abaixo para rodar depois do deploy
   # heroku run 'rake db:setup'
