--- a/config/database.yml
+++ b/config/database.yml
@@ -48,10 +48,7 @@ test:
 #     url: <%= ENV['DATABASE_URL'] %>
 #
 production:
-  <<: *default
-  database: ef-painel_production
-  username: ef-painel
-  password: <%= ENV['EF-PAINEL_DATABASE_PASSWORD'] %>
+  url: <%= ENV['DATABASE_URL'] %>
   
 #exclusão e criação do banco
 # heroku run rake db:drop DISABLE_DATABASE_ENVIRONMENT_CHECK=1
